...
  const renderContent = () => {
    switch (introStep) {
      case IntroStep.WELCOME:
        return (
          <View key="welcome">
            <Animated.View entering={FadeInLeft.delay(100)}>
              <Title text="emberglow" />
            </Animated.View>
            <Animated.View entering={FadeInDown.delay(600)}>
              <Text className="mb-6 mt-1 text-lg font-bold leading-relaxed">
                Discover quests and embrace your journey.
              </Text>
            </Animated.View>
...
          ? require('@/../assets/images/ios-notification.png')
          : require('@/../assets/images/android-notification.png');

        return (
          <View key="notifications">
            <Animated.View entering={FadeInLeft.delay(100)}>
              <Title text="Notifications" />
            </Animated.View>
            <Animated.View entering={FadeInDown.delay(600)}>
              <Text className="mb-6 mt-1 text-lg font-bold leading-relaxed">
                The key to successful quests
              </Text>
            </Animated.View>
...
  };

  // Get button text based on current step
  const getButtonText = () => {
    switch (introStep) {
      case IntroStep.WELCOME:
        return 'Got it';
      case IntroStep.NOTIFICATIONS:
        return 'Enable notifications';
    }
  };

  return (
    <View className="flex-1">
      <FocusAwareStatusBar />
...
