...
            style={{ width: 120, height: 120 }}
            resizeMode="contain"
          />
          <Title className="text-4xl" variant="centered">
            emberglow
          </Title>
          <Text className="text-md font-semibold">Level Up By Logging Off</Text>
        </View>

        {/* Middle description section */}
        <View className="mt-20 flex-1">
          <Text className="mt-20 text-center text-lg text-white">
            Turn phone breaks into epic adventures
          </Text>
        </View>

        <View className="mb-10">
          <Button
            testID="get-started-button"
            label="Begin New Journey"
            onPress={handleGetStarted}
          />
          <TouchableOpacity
            onPress={handleLogin}
            className="mt-4 items-center"
            accessibilityRole="button"
...
