...
            </Text>
          </Animated.View>
        </View>

        <Animated.View entering={FadeIn.delay(2600)}>
          <Button
            label="Create Account"
            onPress={handleCreateAccount}
            accessibilityLabel="Create Account"
            className="bg-primary-500"
            textClassName="text-white font-bold"
          />
        </Animated.View>
...
